--- a/defining_schema.ipynb
+++ b/defining_schema.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -22,34 +22,23 @@
     "    cookie_recipe_url = Column(String(255))\n",
     "    cookie_sku = Column(String(55))\n",
     "    quantity = Column(Integer())\n",
-    "    unit_cost = Column(Numeric(12, 2))\n"
+    "    unit_cost = Column(Numeric(12, 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Table('cookies', MetaData(bind=None), Column('cookie_id', Integer(), table=<cookies>, primary_key=True, nullable=False), Column('cookie_name', String(length=50), table=<cookies>), Column('cookie_recipe_url', String(length=255), table=<cookies>), Column('cookie_sku', String(length=55), table=<cookies>), Column('quantity', Integer(), table=<cookies>), Column('unit_cost', Numeric(precision=12, scale=2), table=<cookies>), schema=None)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Cookie.__table__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -70,12 +59,12 @@
     "    created_on = Column(DateTime(), default=datetime.now)\n",
     "    updated_on = Column(DateTime(), \n",
     "                        default=datetime.now, \n",
-    "                        onupdate=datetime.now)\n"
+    "                        onupdate=datetime.now)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -121,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +130,23 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy.orm import sessionmaker\n",
+    "\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "session  = Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
