filtering, ordering, limiting, etc

--- a/working_with_data.ipynb
+++ b/working_with_data.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -57,6 +57,7 @@
     "    username = Column(String(15), nullable=False, unique=True)\n",
     "    email_address = Column(String(255), nullable=False)\n",
     "    phone = Column(String(20), nullable=False)\n",
+    "    password = Column(String(25), nullable=False)\n",
     "    created_on = Column(DateTime(), default=datetime.now)\n",
     "    updated_on = Column(DateTime(), default=datetime.now, \n",
     "                       onupdate=datetime.now)\n",
@@ -82,7 +83,7 @@
     "                \"shipped={self.shipped})\".format(self=self)\n",
     "        \n",
     "\n",
-    "class LineItems(Base):\n",
+    "class LineItem(Base):\n",
     "    __tablename__ = 'line_items'\n",
     "    \n",
     "    line_item_id = Column(Integer(), primary_key=True)\n",
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -299,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -350,12 +351,532 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dark chocolate chip', 'molasses']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Limiting by slicing (inneficient with a large result set)\n",
+    "query = session.query(Cookie).order_by(Cookie.quantity)[:2]\n",
+    "print([result.cookie_name for result in query])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['dark chocolate chip', 'molasses']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Limiting with limit\n",
+    "query = session.query(Cookie).order_by(Cookie.quantity).limit(2)\n",
+    "print([result.cookie_name for result in query])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "138\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding\n",
+    "from sqlalchemy import func\n",
+    "inv_count = session.query(func.sum(Cookie.quantity)).scalar()\n",
+    "print(inv_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting\n",
+    "rec_count = session.query(func.count(Cookie.cookie_name)).first()\n",
+    "print(rec_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['inventory_count']\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Renaming column count\n",
+    "rec_count = session.query(func.count(\n",
+    "        Cookie.cookie_name).label('inventory_count')).first()\n",
+    "print(rec_count.keys())\n",
+    "print(rec_count.inventory_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cookie(cookie_name='chocolate chip', cookie_recipe_url = 'http://some.aweso.me', cookie_sku='CC01', quantity=12, unit_cost=0.50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter\n",
+    "record = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name == 'chocolate chip').first()\n",
+    "print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cookie(cookie_name='chocolate chip', cookie_recipe_url = 'http://some.aweso.me', cookie_sku='CC01', quantity=12, unit_cost=0.50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter by\n",
+    "record = session.query(Cookie).filter_by(\n",
+    "    cookie_name='chocolate chip').first()\n",
+    "print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate chip\n",
+      "dark chocolate chip\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name.like('%chocolate%'))\n",
+    "for record in query:\n",
+    "    print(record.cookie_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('chocolate chip', 'SKU-CC01')\n",
+      "('dark chocolate chip', 'SKU-CC02')\n",
+      "('molasses', 'SKU-MOL01')\n",
+      "('peanut butter', 'SKU-PB01')\n",
+      "('oatmeal raisin', 'SKU-EWW01')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String concatenation with +\n",
+    "results = session.query(Cookie.cookie_name, \n",
+    "                        'SKU-' + Cookie.cookie_sku).all()\n",
+    "for row in results:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CC01', 'CC02', 'MOL01', 'PB01', 'EWW01']\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = session.query(Cookie.cookie_sku.label('sku')).all()\n",
+    "print([row.sku for row in results])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate chip - 6.00\n",
+      "dark chocolate chip - 0.75\n",
+      "molasses - 0.80\n",
+      "peanut butter - 6.00\n",
+      "oatmeal raisin - 100.00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rodrigovillatoro/venv/lib/python3.5/site-packages/sqlalchemy/sql/sqltypes.py:562: SAWarning: Dialect sqlite+pysqlite does *not* support Decimal objects natively, and SQLAlchemy must convert from floating point - rounding errors and other issues may occur. Please consider storing Decimal numbers as strings or integers on this platform for lossless storage.\n",
+      "  'storage.' % (dialect.name, dialect.driver))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Computing values from multiple columns\n",
+    "from sqlalchemy import cast\n",
+    "query = session.query(Cookie.cookie_name,\n",
+    "                     cast((Cookie.quantity * Cookie.unit_cost),\n",
+    "                         Numeric(12, 2)).label('inv_cost'))\n",
+    "\n",
+    "for result in query:\n",
+    "    print('{} - {}'.format(result.cookie_name, result.inv_cost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peanut butter\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using filter with multiple ClauseElement expressions\n",
+    "query = session.query(Cookie).filter(\n",
+    "    Cookie.quantity > 23,\n",
+    "    Cookie.unit_cost < 0.40\n",
+    ")\n",
+    "\n",
+    "for result in query:\n",
+    "    print(result.cookie_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chocolate chip - 12\n",
+      "dark chocolate chip - 1\n",
+      "peanut butter - 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using or() conjunction\n",
+    "from sqlalchemy import and_, or_, not_\n",
+    "query = session.query(Cookie).filter(\n",
+    "    or_(\n",
+    "        Cookie.quantity.between(10, 50),\n",
+    "        Cookie.cookie_name.contains('chip')\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "for result in query:\n",
+    "    print('{} - {}'.format(result.cookie_name, result.quantity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before: 12\n",
+      "After: 132\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Updating data via object\n",
+    "query = session.query(Cookie)\n",
+    "cc_cookie = query.filter(\n",
+    "    Cookie.cookie_name == 'chocolate chip').first()\n",
+    "print('Before: {}'.format(cc_cookie.quantity))\n",
+    "\n",
+    "cc_cookie.quantity = cc_cookie.quantity + 120\n",
+    "session.commit()\n",
+    "\n",
+    "print('After: {}'.format(cc_cookie.quantity))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Updating data in place\n",
+    "query = session.query(Cookie)\n",
+    "query = query.filter(Cookie.cookie_name == 'chocolate chip')\n",
+    "query.update({Cookie.quantity: Cookie.quantity - 20})\n",
+    "\n",
+    "cc_cookie = query.first()\n",
+    "print(cc_cookie.quantity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Deleting data\n",
+    "query = session.query(Cookie)\n",
+    "query = query.filter(Cookie.cookie_name == 'dark chocolate chip')\n",
+    "dcc_cookie = query.one()\n",
+    "session.delete(dcc_cookie)\n",
+    "session.commit()\n",
+    "dcc_cookie = query.first()\n",
+    "print(dcc_cookie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Deleting data in place\n",
+    "query = session.query(Cookie)\n",
+    "query = query.filter(Cookie.cookie_name == 'molasses')\n",
+    "query.delete()\n",
+    "mol_cookie = query.first()\n",
+    "print(mol_cookie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Adding customers\n",
+    "cookiemon = User(username='cookiemon',\n",
+    "                 email_address='mon@cookie.com',\n",
+    "                 phone='111-111-1111',\n",
+    "                 password='password')\n",
+    "cakeeater = User(username='cakeeater',\n",
+    "                 email_address='cakeeater@cake.com',\n",
+    "                 phone='222-222-2222',\n",
+    "                 password='password')\n",
+    "pieperson = User(username='pieperson',\n",
+    "                 email_address='person@pie.com',\n",
+    "                 phone='333-333-3333',\n",
+    "                 password='password')\n",
+    "session.add(cookiemon)\n",
+    "session.add(cakeeater)\n",
+    "session.add(pieperson)\n",
+    "session.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rodrigovillatoro/venv/lib/python3.5/site-packages/sqlalchemy/sql/sqltypes.py:562: SAWarning: Dialect sqlite+pysqlite does *not* support Decimal objects natively, and SQLAlchemy must convert from floating point - rounding errors and other issues may occur. Please consider storing Decimal numbers as strings or integers on this platform for lossless storage.\n",
+      "  'storage.' % (dialect.name, dialect.driver))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding related objects\n",
+    "\n",
+    "o1 = Order()\n",
+    "o1.user = cookiemon\n",
+    "session.add(o1)\n",
+    "\n",
+    "cc = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name == 'chocolate chip').one()\n",
+    "\n",
+    "line1 = LineItem(cookie=cc, quantity=2, extended_cost=1.00)\n",
+    "\n",
+    "pb = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name == 'peanut butter').one()\n",
+    "\n",
+    "line2 = LineItem(quantity=12, extended_cost=3.00)\n",
+    "line2.cookie = pb\n",
+    "line2.order = o1\n",
+    "\n",
+    "o1.line_items.append(line1)\n",
+    "o1.line_items.append(line2)\n",
+    "\n",
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "o2 = Order()\n",
+    "o2.user = cakeeater\n",
+    "\n",
+    "cc = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name == 'chocolate chip').one()\n",
+    "\n",
+    "line1 = LineItem(cookie=cc, quantity=24, extended_cost=12.00)\n",
+    "\n",
+    "oat = session.query(Cookie).filter(\n",
+    "    Cookie.cookie_name == 'oatmeal raisin').one()\n",
+    "\n",
+    "line2 = LineItem(cookie=oat, quantity=6, extended_cost=6.00)\n",
+    "\n",
+    "o2.line_items.append(line1)\n",
+    "o2.line_items.append(line2)\n",
+    "\n",
+    "session.add(o2)\n",
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Joins"
+   ]
   }
  ],
  "metadata": {
