added sessions and exceptions

--- a/working_with_data.ipynb
+++ b/working_with_data.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "from datetime import datetime\n",
     "from sqlalchemy import (Table, Column, Integer, Numeric, \n",
-    "                        String, DateTime, ForeignKey)\n",
+    "                        String, Boolean, DateTime, ForeignKey)\n",
     "from sqlalchemy.ext.declarative import declarative_base\n",
     "from sqlalchemy.orm import relationship, backref\n",
     "\n",
@@ -74,6 +74,7 @@
     "    \n",
     "    order_id = Column(Integer(), primary_key=True)\n",
     "    user_id = Column(Integer(), ForeignKey('users.user_id'))\n",
+    "    shipped = Column(Boolean(), default=False)\n",
     "    \n",
     "    user = relationship('User', \n",
     "                        backref=backref('orders', order_by=order_id))\n",
@@ -546,6 +547,7 @@
    ],
    "source": [
     "# String concatenation with +\n",
+    "\n",
     "results = session.query(Cookie.cookie_name, \n",
     "                        'SKU-' + Cookie.cookie_sku).all()\n",
     "for row in results:\n",
@@ -601,6 +603,7 @@
    ],
    "source": [
     "# Computing values from multiple columns\n",
+    "\n",
     "from sqlalchemy import cast\n",
     "query = session.query(Cookie.cookie_name,\n",
     "                     cast((Cookie.quantity * Cookie.unit_cost),\n",
@@ -627,6 +630,7 @@
    ],
    "source": [
     "# Using filter with multiple ClauseElement expressions\n",
+    "\n",
     "query = session.query(Cookie).filter(\n",
     "    Cookie.quantity > 23,\n",
     "    Cookie.unit_cost < 0.40\n",
@@ -655,6 +659,7 @@
    ],
    "source": [
     "# Using or() conjunction\n",
+    "\n",
     "from sqlalchemy import and_, or_, not_\n",
     "query = session.query(Cookie).filter(\n",
     "    or_(\n",
@@ -685,6 +690,7 @@
    ],
    "source": [
     "# Updating data via object\n",
+    "\n",
     "query = session.query(Cookie)\n",
     "cc_cookie = query.filter(\n",
     "    Cookie.cookie_name == 'chocolate chip').first()\n",
@@ -713,6 +719,7 @@
    ],
    "source": [
     "# Updating data in place\n",
+    "\n",
     "query = session.query(Cookie)\n",
     "query = query.filter(Cookie.cookie_name == 'chocolate chip')\n",
     "query.update({Cookie.quantity: Cookie.quantity - 20})\n",
@@ -780,6 +787,7 @@
    "outputs": [],
    "source": [
     "# Adding customers\n",
+    "\n",
     "cookiemon = User(username='cookiemon',\n",
     "                 email_address='mon@cookie.com',\n",
     "                 phone='111-111-1111',\n",
@@ -869,13 +877,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'cookiemon', '111-111-1111', 'peanut butter', 12, Decimal('3.00')), (1, 'cookiemon', '111-111-1111', 'chocolate chip', 2, Decimal('1.00'))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Join to select from multiple tables\n",
+    "\n",
+    "query = session.query(\n",
+    "    Order.order_id, \n",
+    "    User.username,\n",
+    "    User.phone,\n",
+    "    Cookie.cookie_name,\n",
+    "    LineItem.quantity,\n",
+    "    LineItem.extended_cost,\n",
+    ")\n",
+    "\n",
+    "query = query.join(User).join(LineItem).join(Cookie)\n",
+    "\n",
+    "results = query.filter(User.username == 'cookiemon').all()\n",
+    "\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('cakeeater', 1)\n",
+      "('cookiemon', 1)\n",
+      "('pieperson', 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using outerjoin\n",
+    "\n",
+    "query = session.query(User.username, func.count(Order.order_id))\n",
+    "query = query.outerjoin(Order).group_by(User.username)\n",
+    "\n",
+    "for row in query:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 'cakeeater', '222-222-2222', 'chocolate chip', 24, Decimal('12.00')),\n",
+       " (2, 'cakeeater', '222-222-2222', 'oatmeal raisin', 6, Decimal('6.00'))]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Chaining\n",
+    "\n",
+    "def get_orders_by_customer(cust_name):\n",
+    "    query = session.query(\n",
+    "        Order.order_id, \n",
+    "        User.username, \n",
+    "        User.phone,\n",
+    "        Cookie.cookie_name,\n",
+    "        LineItem.quantity,\n",
+    "        LineItem.extended_cost)\n",
+    "    query = query.join(User).join(LineItem).join(Cookie)\n",
+    "    results = query.filter(User.username == cust_name).all()\n",
+    "    return results\n",
+    "\n",
+    "get_orders_by_customer('cakeeater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Joins"
+    "# Conditional Chaining\n",
+    "\n",
+    "def get_orders_by_customer(cust_name, shipped=None, details=False):\n",
+    "    query = session.query(Order.order_id, User.username, User.phone)\n",
+    "    query = query.join(User)\n",
+    "    if details:\n",
+    "        query = query.add_columns(Cookie.cookie_name,\n",
+    "                                 LineItem.quantity,\n",
+    "                                 LineItem.extended_cost)\n",
+    "        query = query.join(LineItem).join(Cookie)\n",
+    "    if shipped is not None:\n",
+    "        query = query.where(Order.shipped == shipped)\n",
+    "    results = query.filter(User.username == cust_name).all()\n",
+    "    return results\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, False, 'cakeeater', '222-222-2222')]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all orders\n",
+    "get_orders_by_customer('cakeeater')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2,\n",
+       "  False,\n",
+       "  'cakeeater',\n",
+       "  '222-222-2222',\n",
+       "  'chocolate chip',\n",
+       "  24,\n",
+       "  Decimal('12.00')),\n",
+       " (2, False, 'cakeeater', '222-222-2222', 'oatmeal raisin', 6, Decimal('6.00'))]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get all orders with details\n",
+    "get_orders_by_customer('cakeeater', details=True)"
    ]
   }
  ],
